assets/css/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    font-family: serif;
    background-color: beige;
 }

/* HEADER AND NAVIGATION SECTION */
header {
    padding: 35px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: #333333;
    color:#333333;
    padding: 15px; /*adjusts how much space header 
    takes up around itself too; adjusts heigh in away; able to 
    pull header up with elements inside still positioned 
    as wanted*/
    /*position: relative;*/
}

.container-nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
 /* position: absolute; 
  left: 0;
  top: 4px; */
  width: 100%;
}

h1 {
    padding: 0 8px 0px 70px;
    font-size: 36px;
    background-color: lightblue;
    /* position:absolute;
    left:0;
    top: 12px; */
    margin-left: -40px;
}

nav {
    text-align: center;
    padding-top: 10px;
  }
  
nav a {
    color: lightblue;
    padding: 14px 20px;
    text-decoration: underline;
    text-align: center;
    font-size: 20px;
  }

main {
    display: flex;
    flex-wrap: wrap;

}

/* Hero Image Section */

.hero {
  width: 100%;
  height:250px;
  margin-bottom:5px;
  background-image: url("../images/cole-patrick-hpCHLFknc2s-unsplash.jpg");
  background-size: cover;
  background-position: center;
  position: relative;
}

.container-cool-subtitle {
  display: inline;
  width: auto;
  position: absolute;
  bottom: 20px;
  right: 35px;
}

h3 {
  font-size: 26px;
  background-color: lightblue;
  color: #333333;
}

/* About Section */


section {
    padding: 20px 10px;
    width: 100%;
    margin: 20px 0px;
    border: 5px solid purple;
}

.container-section {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  border: 5px solid brown;

}

.section_title{
  font-size: 30px;
  text-align: right;
  width: 25%;
  border-right: 5px solid black;
  padding: 10px;
  border: 8px solid red;
}

.contents{
  margin: 10px;
  width: 73%;
  border: 5px solid yellow;
}

.one{
    display: block;
    margin-left: 20px;
    line-height: 2;
}

/* Work Section */

.work-images-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 100%;
  border: 5px solid rgb(5, 206, 22);
}

/*
.card {
  padding: 0;
  width: auto;
  text-align: center;
  border: 5px solid blue;
  margin: 10px;
}
*/

.work-images-container a {
  border: 5px solid aqua;
  margin: 10px;
  overflow: hidden;
}

.work-images-tag {
  padding: 10px;
  position: absolute;
  bottom: 20px;
  background-color: aqua;
  

}

h4 {
  font-size: 20px;
   color: #333333;
   text-align: center;
}

.two {
  font-size: 16px;
  color: #333333;
  text-align: left;
}

.surf-report {
  position: relative;
  width: 100%;
  height: 500px;
  /*background-image: url("../images/tatonomusic-FFCgotROOTY-unsplash.jpg");
  background-position: center;
  background-repeat: no-repeat;*/
}

.flamingo, 
.neon {
  position: relative;
  width: 50%;
  height: 200px;
  /*background-image: url("../images/IMG_0022.jpg");
  background-position: center;
  background-repeat: no-repeat;*/
}



  /*aside {
    float: left;
    width: 25%;
    flex: 1;
    margin-left: 50px;
    padding: 20px;
    border: 5px solid red;
  }

  section {
    flex: 3;
    padding: 20px;
    dispaly: block;
    border-left: solid black;
  }
  */

  
  @media screen and (max-width: 1142px) {
    .surf-report {
      width: 100%;
      height: 250px;
      /*background-position: center; */
  }

  .led-wall {
      width: 45%;
      height: 200px;
     /* background-position: center;
      background-size: cover; */
  } 
}
  @media screen and (max-width: 768px) {
    /* Use flex-direction to stack the navbar, sidebar, and body */
    
    main,
    .container-nav, 
    .container-section, .container-cool-subtitle {
      flex-direction: column;
      text-align: center;
    } 
    
    h1 {
      padding: 0 8px 0px 8px;
      font-size: 36px;
      background-color: lightblue;
      border: 5px solid red;
      margin-left: 0px;
    }

    .container-cool-subtitle {
      right: 175px;
    }

  .section_title{
    font-size: 30px;
    text-align: center;
    width: 25%;
    padding: 10px;
    border: 8px solid red;
  }

  .surf-report {
    height: 150px;
}

.led-wall{
    height: 100px;
}
    /* Make the sidebar stack below the body */
    .contents {
      order: 2;
    }
  }
    @media screen and (max-width: 575px) {
      .project-container a {
        width: 100%;
        padding: 0;
      }
      .surf-report {
        height: 100px;
    }

    .led-wall {
        height: 100px;
    }
    }

